<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="automation_short">Auto</string>
    <string name="automation">Automation</string>
    <string name="automation_description">User defined automation tasks</string>
    <string name="automation_missing_task_name">Please enter a task name.</string>
    <string name="automation_missing_trigger">Please specify at least one trigger.</string>
    <string name="automation_missing_action">Please specify at least one action.</string>
    <string name="exportsettings_message">Settings Export: %1$s</string>
    <string name="export_settings_short">Text in treatments:</string>
    <string name="alarm_message">Alarm: %1$s</string>
    <string name="alarm_short">Alarm:</string>
    <string name="message_short">Msg:</string>
    <string name="alreadyenabled">Already enabled</string>
    <string name="alreadydisabled">Already disabled</string>
    <string name="alreadysuspended">Already suspended</string>
    <string name="notsuspended">Not suspended</string>
    <string name="suspendloopforXmin">Suspend loop for %1$d min</string>
    <string name="notification_message">Notification: %1$s</string>
    <string name="profilename">Change profile to</string>
    <string name="changengetoprofilename">Change profile to %1$s</string>
    <string name="automation_trigger_pump_last_connection_label">Last connection to pump</string>
    <string name="automation_trigger_pump_last_connection_description">Last connection to pump [minutes ago]</string>
    <string name="automation_trigger_pump_last_connection_compared">Last connection to pump %1$s %2$s min ago</string>
    <string name="alreadyset">Already set</string>
    <string name="profilepercentage">Profile percentage</string>
    <string name="startprofileforever">Start profile %1$d%%</string>
    <string name="percent_u">Percent [%]:</string>
    <string name="sendsmsactionlabel">Send SMS: %1$s</string>
    <string name="sendsmsactiondescription">Send SMS to all numbers</string>
    <string name="sendsmsactiontext">Send SMS with text</string>
    <string name="starttemptarget">Start temp target</string>
    <string name="islesser">is lesser than</string>
    <string name="isequalorlesser">is equal or lesser than</string>
    <string name="isequal">is equal to</string>
    <string name="isequalorgreater">is equal or greater than</string>
    <string name="isgreater">is greater than</string>
    <string name="isnotavailable">is not available</string>
    <string name="glucoseisnotavailable">Glucose is not available</string>
    <string name="glucosecomparedmgdl">Glucose %1$s %2$.0f %3$s</string>
    <string name="glucosecomparedmmol">Glucose %1$s %2$.1f %3$s</string>
    <string name="notemptarget">Temp Target does not exist</string>
    <string name="temptargetcomparedmgdl">Temp Target %1$s %2$.0f %3$s</string>
    <string name="temptargetcomparedmmol">Temp Target %1$s %2$.1f %3$s</string>
    <string name="percentagecompared">Profile pct %1$s %2$d</string>
    <string name="iobcompared">IOB %1$s %2$.1f</string>
    <string name="or">Or</string>
    <string name="xor">Exclusive or</string>
    <string name="atspecifiedtime">At %1$s</string>
    <string name="use_network_location">Use network location</string>
    <string name="use_gps_location">Use GPS location</string>
    <string name="use_passive_location">Use passive location</string>
    <string name="locationservice">Location service</string>
    <string name="onconnect">On connect</string>
    <string name="ondisconnect">On disconnect</string>
    <string name="short_avgdelta">Short avg. delta</string>
    <string name="long_avgdelta">Long avg. delta</string>
    <string name="delta">Delta</string>
    <string name="locationis">%1$s %2$s</string>
    <string name="location_mode">When </string>
    <string name="location_inside">When you are inside the area</string>
    <string name="location_outside">When you are outside the area</string>
    <string name="location_going_in">When you enter the area named</string>
    <string name="location_going_out">When you leave the area named</string>
    <string name="time_range">Time range</string>
    <string name="timerange_value">Time is between %1$s and %2$s</string>
    <string name="between">Between </string>
    <string name="delete_short">DEL</string>
    <string name="add_short">ADD</string>
    <string name="copy_short">COPY</string>
    <string name="temptargetcompared">Temp target %1$s</string>
    <string name="btdevicecompared">Bluetooth connection to device %1$s %2$s</string>
    <string name="btdevice">Connection to Bluetooth device </string>
    <string name="wifissidcompared">WiFi SSID %1$s %2$s</string>
    <string name="autosenscompared">Autosens %1$s %2$s %%</string>
    <string name="autosenslabel">Autosens %</string>
    <string name="deltacompared">%3$s %1$s %2$s</string>
    <string name="deltalabel">BG difference</string>
    <string name="deltalabel_u">BG difference [%1$s]</string>
    <string name="currentlocation">Current Location</string>
    <string name="choose_from_map">Choose from map</string>
    <string name="location">Location</string>
    <string name="glucose_u">Glucose [%1$s]:</string>
    <string name="target_u">Target [%1$s]:</string>
    <string name="lastboluslabel">Last bolus ago</string>
    <string name="lastboluscompared">Last bolus time %1$s %2$s min ago</string>
    <string name="triggercoblabel">COB</string>
    <string name="cobcompared">COB %1$s %2$.0f</string>
    <string name="triggerHeartRate">Heart Rate</string>
    <string name="triggerHeartRateDesc">HR %1$s %2$.0f</string>
    <string name="triggerSensorAgeLabel">Sensor age</string>
    <string name="triggerSensorAgeDesc">Sensor age %1$s %2$.1f hour</string>
    <string name="triggerCannulaAgeLabel">Cannula age</string>
    <string name="triggerCannulaAgeDesc">Cannula age %1$s %2$.1f hour</string>
    <string name="triggerPodChangeLabel">Pod activation</string>
    <string name="triggerPodChangeDesc">Pod activated</string>
    <string name="triggerInsulinAgeLabel">Insulin age</string>
    <string name="triggerInsulinAgeDesc">Insulin age %1$s %2$.1f hour</string>
    <string name="triggerPumpBatteryAgeLabel">Pump battery age</string>
    <string name="triggerPumpBatteryAgeDesc">Pump battery age %1$s %2$.1f hour</string>
    <string name="triggerReservoirLevelLabel">Reservoir level</string>
    <string name="triggerReservoirLevelDesc">Reservoir level %1$s %2$.0f</string>
    <string name="triggerPumpBatteryLevelLabel">Pump battery level</string>
    <string name="triggerPumpBatteryLevelDesc">Pump battery level %1$s %2$.0f</string>
    <string name="iob_u">IOB [U]:</string>
    <string name="distance_short">Dist [m]:</string>
    <string name="recurringTime">Recurring time</string>
    <string name="every">Every</string>
    <string name="never">Never</string>
    <string name="condition">Condition:</string>
    <string name="action">Action:</string>
    <string name="taskname">Task name</string>
    <string name="edit_short">EDIT</string>
    <string name="please_choose_an_action_type">Choose an action type</string>
    <string name="please_choose_a_trigger_type">Choose a trigger type</string>
    <string name="please_choose_a_operation_type">Choose a operation type</string>
    <string name="triggers">Triggers:</string>
    <string name="preconditions">Preconditions:</string>
    <string name="automation_event">Automation event</string>
    <string name="reorder_label">Reorder</string>
    <string name="user_action">User action</string>
    <string name="remove_selected_items">Remove selected items</string>
    <string name="count_selected">%1$d selected</string>
    <string name="system_automation">System automation</string>
    <string name="run_automations">Run automations</string>
    <string name="add_automation">Add rule</string>
    <string name="stop_processing">Stop processing</string>

    <!--    Reminders-->
    <string name="time_to_eat">Time to eat!\nRun Bolus wizard and do calculation again.</string>
    <string name="time_to_bolus">Time to bolus!\nRun Bolus wizard and do calculation again.</string>
    <string name="error_setting_reminder">Error while setting future alarm</string>

    <!--    Autotune-->
    <string name="autotune_profile_name">Autotune profile %1$s</string>
    <string name="autotune_run">Run Autotune</string>
    <string name="autotune_run_without_autoswitch">Autotune ran without profile switch</string>
    <string name="autotune_run_with_autoswitch">Autotune ran and profile automatically switched</string>
    <string name="autotune_run_with_error">Error during last Autotune run</string>
    <string name="autotune_run_cancelled">Another run of Autotune is detected, run cancelled</string>

    <!--    Steps count-->
    <string name="triggerStepsCountLabel">Steps Count</string>
    <string name="triggerStepsCountDesc">Steps count per %1$s minutes %2$s %3$.0f</string>
    <string name="triggerStepsCountDropdownLabel">Measurement Duration</string>

    <!--    SMB mode-->
    <string name="changeSmbState">Enable/disable SMB</string>
    <string name="changeSmbTo">Change SMB to %1$s</string>
    <string name="newSmbMode">New SMB mode:</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>

    <!--    Location Search (OpenStreetMap)-->
    <string name="search_location">Search Location</string>
    <string name="search_address">Enter address or place name</string>
    <string name="search">Search</string>
    <string name="no_results_found">No results found</string>
    <string name="osm_attribution">Data © OpenStreetMap contributors</string>
    <string name="search_location_button">Search location</string>
    <string name="search_error">Error searching for location</string>
    <string name="pick_from_map">Pick from map</string>
    <string name="pick_location_from_map">Pick Location from Map</string>
    <string name="tap_to_select_location">Tap on the map to select a location</string>
    <string name="selected_coords">Selected: %1$.6f, %2$.6f</string>

</resources>