<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/StyleDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <RelativeLayout
        style="@style/StyleDialogHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_location_on" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/pick_location_from_map"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

    <TextView
        android:id="@+id/selected_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/tap_to_select_location"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/osm_attribution"
        android:textSize="10sp"
        android:textColor="?android:attr/textColorSecondary" />

    <include layout="@layout/okcancel" />

</LinearLayout>
